--- a/src/pages/error/error.hbs
+++ b/src/pages/error/error.hbs
@@ -1,5 +1,5 @@
 <div class="error">
     <div class="error__number">{{number}}</div>
     <div class="error__message">{{message}}</div>
-    <div class="error__button">Назад к чатам</div>
+    <a href="#" page="chat"><div class="error__button">Назад к чатам</div></a>
 </div>
