fix: after review

--- a/src/components/button/button.hbs
+++ b/src/components/button/button.hbs
@@ -1,1 +1,1 @@
-<button class="button button-{{type}} {{#if color}}button--{{color}}{{/if}}">{{text}}</button>
+<button type="{{#if isSubmit}}submit{{/if}}" class="button button-{{type}} {{#if color}}button--{{color}}{{/if}}">{{text}}</button>
