--- a/src/components/talking-area/talking-area.hbs
+++ b/src/components/talking-area/talking-area.hbs
@@ -16,8 +16,8 @@
             </div>
         {{/each}}
     </div>
-    <div class="talk__send-interface">
+    <form class="talk__send-interface">
         <input type="text" placeholder="Сообщение" name="message" class="send-interface__field"></input>
-        <div class="send-interface__button"><img src="arrow-send.svg" alt="arrow"></div>
-    </div>
+        <button type="submit" class="send-interface__button"><img src="arrow-send.svg" alt="arrow"></button>
+    </form>
 </div>
