--- a/src/pages/change-password/change-password.scss
+++ b/src/pages/change-password/change-password.scss
@@ -23,6 +23,10 @@
         gap: 60px;
         flex: 1;
         margin: auto;
+
+        button {
+            align-self: center;
+        }
     }
 }
 
