--- a/src/pages/navigation/navigation.hbs
+++ b/src/pages/navigation/navigation.hbs
@@ -1,5 +1,7 @@
-<ul>
-    {{~#each pages}}
-        <li><a href="#" page="{{systemName}}">{{readableName}}</a></li>
-    {{/each}}
-</ul>
+<nav>    
+    <ul>
+        {{~#each pages}}
+            <li><a href="#" page="{{systemName}}">{{readableName}}</a></li>
+        {{/each}}
+    </ul>
+</nav>
