--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -1,5 +1,5 @@
-<div class="input-container">
-    <input type="{{type}}" placeholder=" " name="{{name}}" class="">
-    <label for="{{name}}">{{label}}</label>
+<label for="{{name}}" class="input-container">
+    <input type="{{type}}" placeholder=" " name="{{name}}" class="input-field">
+    <span class="input-label">{{label}}</span>
     <div class="input-error">{{errorText}}</div>
-</div>
+</label>
