--- a/src/components/talking-area/talking-area.scss
+++ b/src/components/talking-area/talking-area.scss
@@ -25,6 +25,7 @@
             height: 34px;
             background-color: #EFEFEF;
             border-radius: 100px;
+            overflow: hidden;
         }
 
         &__name {
