--- a/src/pages/change-password/change-password.hbs
+++ b/src/pages/change-password/change-password.hbs
@@ -1,12 +1,10 @@
 <div class="profile">
-    <a href="#" page="userProfile"><div class="profile__back"><img src="arrow-send.svg" alt="arrow"></div></a>
-    <div class="profile__info">
+    <button class="profile__back"><img src="arrow-send.svg" alt="arrow"></button>
+    <form class="profile__info">
         <div class="info__description">
             {{> Input type="password" label="Старый пароль" name="oldPassword"}}
             {{> Input type="password" label="Новый пароль" name="newPassword"}}
         </div>
-        <a href="#" page="userProfile">
-            {{> Button type="confirm" text="Сохранить"}}
-        </a>
-    </div>
+        {{> Button type="confirm" text="Сохранить" isSubmit=true}}
+    </form>
 </div>
