--- a/src/pages/change-profile/change-profile.scss
+++ b/src/pages/change-profile/change-profile.scss
@@ -18,10 +18,15 @@
     }
 
     &__info {
+        position: relative;
         display: flex;
         flex-direction: column;
         gap: 60px;
         flex: 1;
+
+        button {
+            align-self: center;
+        }
     }
 }
 
@@ -33,10 +38,12 @@
     gap: 20px;
 
     &__image {
-        width: 130px;
-        height: 130px;
-        border: 100px;
-        overflow: hidden;
+        img {
+            width: 130px;
+            height: 130px;
+            border: 100px;
+            overflow: hidden;
+        }
 
         &--change-image {
             display: none;
@@ -53,6 +60,25 @@
                 display: inline;
             }
         }
+
+        &__modal {
+            position: absolute;
+            z-index: 10;
+            top: 0;
+            bottom: 0;
+            left: calc(50% - 200px);
+            margin: auto 0;
+            padding: 20px;
+            height: 200px;
+            width: 400px;
+            border: none;
+            border-radius: 12px;
+            background: #FFF;
+            box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.14);
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
     }
 
     &__name {
@@ -60,6 +86,10 @@
         font-size: 16px;
         text-align: center;
     }
+}
+
+.image__modal__header {
+    font-size: 20px;
 }
 
 .info__description {
