--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -33,10 +33,12 @@
     gap: 20px;
 
     &__image {
-        width: 130px;
-        height: 130px;
-        border: 100px;
-        overflow: hidden;
+        img {
+            width: 130px;
+            height: 130px;
+            border: 100px;
+            overflow: hidden;
+        }
     }
 
     &__name {
