fix: after review

--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -5,7 +5,7 @@
         {{> Input type="password" label="Пароль" name="password"}}
     </div>
     <div class="login__buttons">
-        {{> Button type="confirm" text="Авторизоваться" isSubmit="true"}}
+        {{> Button type="confirm" text="Авторизоваться" isSubmit=true}}
         {{> Button type="cancel" text="Нет аккаунта?"}}
     </div>
 </form>
