--- a/src/pages/change-password/change-password.hbs
+++ b/src/pages/change-password/change-password.hbs
@@ -2,9 +2,9 @@
     <button class="profile__back"><img src="arrow-send.svg" alt="arrow"></button>
     <form class="profile__info">
         <div class="info__description">
-            {{> Input type="password" label="Старый пароль" name="oldPassword"}}
-            {{> Input type="password" label="Новый пароль" name="newPassword"}}
+            {{{ oldPasswordInput }}}
+            {{{ newPasswordInput }}}
         </div>
-        {{> Button type="confirm" text="Сохранить" isSubmit=true}}
+        {{{ saveButton }}}
     </form>
 </div>
