--- a/src/pages/chat/chat.hbs
+++ b/src/pages/chat/chat.hbs
@@ -26,7 +26,7 @@
         {{#if isMock}}
             <div class="talking-area__mock">Выберите чат чтобы отправить сообщение</div>
         {{else}}
-            {{> TalkingArea talkingData=talkingData}}
+            {{{ talkingArea }}}
         {{/if}}
     </div>
 </div>
