--- a/src/pages/change-profile/change-profile.scss
+++ b/src/pages/change-profile/change-profile.scss
@@ -74,7 +74,7 @@
             border: none;
             border-radius: 12px;
             background: #FFF;
-            box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.14);
+            box-shadow: 0 0 6px 0 rgb(0 0 0 / 14%);
             display: flex;
             flex-direction: column;
             justify-content: space-between;
