--- a/src/pages/login/login.hbs
+++ b/src/pages/login/login.hbs
@@ -1,11 +1,11 @@
 <form class="login">
     <h1 class="login__header">Вход</h1>
     <div class="login__fields">
-        {{> Input type="text" label="Логин" name="login"}}
-        {{> Input type="password" label="Пароль" name="password"}}
+        {{{ loginInput }}}
+        {{{ passwordInput }}}
     </div>
     <div class="login__buttons">
-        {{> Button type="confirm" text="Авторизоваться" isSubmit=true}}
-        {{> Button type="cancel" text="Нет аккаунта?"}}
+        {{{ authButton }}}
+        {{{ registerButton }}}
     </div>
 </form>
