--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -9,7 +9,7 @@
     border: none;
     border-radius: 12px;
     background: #FFF;
-    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.14);
+    box-shadow: 0 0 6px 0 rgb(0 0 0 / 14%);
 }
 
 .login__header {
