--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -14,9 +14,9 @@
             {{/each}}
         </div>
         <div class="info__manage-buttons">
-            {{> Button type="line" text="Изменить данные" color="blue"}}
-            {{> Button type="line" text="Изменить пароль" color="blue"}}
-            {{> Button type="line" text="Выйти" color="red"}}
+            {{{ changeDataButton }}}
+            {{{ changePasswordButton }}}
+            {{{ logoutButton }}}
         </div>
     </div>
 </div>
